# storage/api-docs/api-docs.json
@@ -680,7 +680,7 @@
                         }
                     },
                     {
-                        "name": "perPage",
+                        "name": "per_page",
                         "in": "query",
                         "required": false,
                         "schema": {
@@ -973,7 +973,7 @@
                         }
                     },
                     {
-                        "name": "perPage",
+                        "name": "per_page",
                         "in": "query",
                         "required": false,
                         "schema": {
@@ -1937,7 +1937,7 @@
                         }
                     },
                     {
-                        "name": "perPage",
+                        "name": "per_page",
                         "in": "query",
                         "required": false,
                         "schema": {
@@ -2063,7 +2063,7 @@
                         }
                     },
                     {
-                        "name": "perPage",
+                        "name": "per_page",
                         "in": "query",
                         "required": false,
                         "schema": {
@@ -2393,7 +2393,7 @@
                         }
                     },
                     {
-                        "name": "perPage",
+                        "name": "per_page",
                         "in": "query",
                         "required": false,
                         "schema": {
@@ -4445,6 +4445,22 @@
                         "type": "boolean",
                         "example": true
                     },
+                    "rating_avg": {
+                        "type": "number",
+                        "format": "float",
+                        "example": 4.5,
+                        "nullable": true
+                    },
+                    "reviews_count": {
+                        "type": "integer",
+                        "example": 10,
+                        "nullable": true
+                    },
+                    "sold_count": {
+                        "type": "integer",
+                        "example": 50,
+                        "nullable": true
+                    },
                     "category": {
                         "properties": {
                             "id": {
@@ -4513,6 +4529,10 @@
                         "example": "Great product!"
                     },
                     "is_approved": {
+                        "type": "boolean",
+                        "example": true
+                    },
+                    "is_verified": {
                         "type": "boolean",
                         "example": true
                     },
